--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "seed": "node db/seed.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8"
   },
   "repository": {
